--- a/jobhelp_test/src/components/Navbar/Navbar.css
+++ b/jobhelp_test/src/components/Navbar/Navbar.css
@@ -141,3 +141,11 @@
   opacity: 0.6;
 }
 
+.enter-logo {
+  position: absolute;
+  color: #FFFFFF;
+  left: 9px;
+  top: 11px;
+  width: 15px;
+  height: 15px;
+}
